--- a/css/tvShow.css
+++ b/css/tvShow.css
@@ -7,7 +7,6 @@ html{
     -moz-border-radius:28px;
     -webkit-border-radius:28px;
     border-radius:28px;
-    /* border:1px solid #124d77; */
     display:inline-block;
     cursor:pointer;
     color:#ffffff;
@@ -67,7 +66,7 @@ html{
 .tvShow-short-technical-info div{
     display: inline;
     font-size: 1em;
-    margin: 0 2.1em;
+    margin: 0 1.9em;
 }
 
 .tvShow-short-technical-info{
@@ -200,7 +199,6 @@ html{
 
     .tvShow-info-subject, .tvShow-info-subject-content{
         display: inline-flex;
-        /* text-align: left; */
         font-size: 1.4em;
         width: 45em;
     }
@@ -241,9 +239,6 @@ html{
         width: 300px;
     }
 
-    .tvShow-info-box-desktop{
-        /* padding: 2em 2em 0 0; */
-    }
 
     .tvShow-info-box-desktop{
         margin-top: 10%;
@@ -258,7 +253,6 @@ html{
         display: block;
         text-align: right;
         width: 40%;
-        /* color: rgba(43, 105, 226, 0.99); */
     }
 
     .tvShow-info-box-desktop .tvShow-info-subject-content span{
@@ -297,7 +291,6 @@ html{
 
     .tvShow-info-preview video{
         width:80%;
-        /* background-color:red; */
     }
 
     .tvShow-info-title-desktop{
@@ -323,8 +316,9 @@ html{
         display: block;
     }
     .tvShow-short-technical-info-desktop div{
-        font-size: 0.7em;
+        font-size: 0.8em;
         margin: 0 2.1em;
+        display: inline-flex;
     }
 
     .watchlist-tvShow-button-desktop {
@@ -332,17 +326,14 @@ html{
         -moz-border-radius:28px;
         -webkit-border-radius:28px;
         border-radius:28px;
-        /* border:1px solid #124d77; */
         display:block;
         cursor:pointer;
         color:#ffffff;
-        /* margin-top: 2em; */
         margin-left: 6em;
-        margin-right: 7em;
         margin-top: 1.1em;
         font-family:Arial;
         font-size: 0.8em;
-        padding: 0.6em 1.1em;
+        padding: 0.6em 1.5em;
         text-decoration:none;
         text-shadow:0px 1px 0px #154682;
     }
