--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -19,6 +19,9 @@
                 </div>
                 <div class="movie-watchlist-view">
                     <select class="watchlist-button-desktop" name="Add to watchlist">
+                        {{#each watchlists as |watchlist|}}
+                        <option class="watchlist-select-group" value="{{watchlist.id}}"> watchlist.name </option>
+                        {{/each}}
                     </select>
                 </div>
             </div>
