Starts working on adding watchlists to the movie view

--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -19,10 +19,16 @@
                 </div>
                 <div class="movie-watchlist-view">
                     <select class="watchlist-button-desktop" name="Add to watchlist">
+                        <option class="dummy-watchlist-option" selected> </option>
+                        <option class="watchlist-select-group" value="create-watchlist"> New watchlist... </option>
                         {{#each watchlists as |watchlist|}}
                             <option class="watchlist-select-group" value="{{watchlist.id}}"> watchlist.name </option>
                         {{/each}}
                     </select>
+                    <div class="new-watchlist" style="display: none;">
+                        <input type="text" class="new-watchlist-input" placeholder="Enter new watchlist name"/>
+                        <button type="button" class="submit-new-watchlist" disabled="disabled">Submit</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -31,10 +37,16 @@
             <div class="movie-bar-genre">{{primaryGenreName}}</div>
             <div class="watchlist-button movie-watchlist-view">
                 <select class="myButton" name="Add to watchlist">
+                    <option class="dummy-watchlist-option" selected> </option>
+                    <option class="watchlist-select-group" value="create-watchlist" selected> New watchlist... </option>
                     {{#each watchlists as |watchlist|}}
                         <option class="watchlist-select-group" value="{{watchlist.id}}"> watchlist.name </option>
                     {{/each}}
                 </select>
+                <div class="new-watchlist" style="display: none;">
+                    <input type="text" class="new-watchlist-input" placeholder="Enter new watchlist name"/>
+                    <button type="button" class="submit-new-watchlist" disabled="disabled">Submit</button>
+                </div>
             </div>
             <div class="movie-info-box-desktop">
                 <div class="movie-info-subject">
