--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -59,11 +59,7 @@
                 </div>
                 <div class="movie-info-subject desktop-preview">
                     <span class="movie-info-title-desktop">Trailer:</span>
-                    <span class="movie-info-preview">
-                        <video width=100% controls>
-                            <source src={{previewUrl}} type="video/m4v">
-                            Your browser does not support HTML5 video.
-                        </video>
+                    <span class="movie-info-preview movie-info-preview">
                     </span>
                 </div>
 
@@ -115,10 +111,8 @@
 
     <div class="movie-preview">
         <span>Trailer</span>
-        <video width=100% controls>
-            <source src={{trailerURL}} type="video/m4v">
-            Your browser does not support HTML5 video.
-        </video>
+        <div class="movie-video-preview">
+        </div>
     </div>
 
 </div>
