Refactors the youtube videos in a view. Also, removes google API key from the main since there was a bug on application start

--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="movie-info-subject desktop-preview">
                     <span class="movie-info-title-desktop">Trailer:</span>
-                    <span class="movie-info-preview movie-info-preview">
+                    <span class="movie-video-preview movie-info-preview">
                     </span>
                 </div>
 
