--- a/js/templates/watchlist.html
+++ b/js/templates/watchlist.html
@@ -1,9 +1,41 @@
-<!--Showing an item of a watchlist type -->
-<div>
-    {{id}}
+<div class="watchlist-box">
+    <div class="selection-box">
+        <input type="checkbox" value="{{id}}"/>
+    </div>
 
-    <span>{{name}}</span>
+    <div class="watchlist-aside">
+        <h4 class="watchlist-title">{{name}}</h4>
 
-    <span>{{email}}</span>
+        <div class="watchlist-movies">
+            {{#each movies}}
+            <div class="watchlist-movie-select-box">
+                <input type="checkbox" value="{{trackId}}"/>
+            </div>
 
+            <a class="movies-box" href="#movie/{{trackId}}">
+                <div class="thumbnail">
+                    <div class="initial-image">
+                        <img class="movies-thumbnail" src="{{artworkUrl100}}"/>
+                    </div>
+                </div>
+
+                <div class="movies-top-box">
+                    <div class="movies-header">
+                        <h3 class="movies-title">{{trackName}}</h3>
+                        <div class="initial-release-date">{{releaseYear}}</div>
+                    </div>
+
+                    <div class="movies-description">
+                        <p class="movies-description-text">{{longDescription}}</p>
+                    </div>
+
+                    <div class="movies-footer">
+                        <div class="content-advisory-rating">{{convertDuration}}</div>
+                        <div class="duration">{{convertDuration}}</div>
+                    </div>
+                </div>
+            </a>
+            {{/each}}
+        </div>
+    </div>
 </div>
