--- a/js/templates/watchlist.html
+++ b/js/templates/watchlist.html
@@ -8,34 +8,36 @@
 
         <div class="watchlist-movies">
             {{#each movies}}
-            <div class="watchlist-movie-select-box">
-                <input class="delete-watchlist-movie-checkbox" type="checkbox" value="{{trackId}}"/>
+            <div class="watchlist-movie">
+                <div class="watchlist-movie-select-box">
+                    <input class="delete-watchlist-movie-checkbox" type="checkbox" data-id="{{../id}}" value="{{trackId}}"/>
+                </div>
+
+                <a class="movies-box" href="#movie/{{trackId}}">
+                    <div class="thumbnail">
+                        <div class="initial-image">
+                            <img class="movies-thumbnail" src="{{artworkUrl100}}"/>
+                        </div>
+                    </div>
+
+                    <div class="movies-top-box">
+                        <div class="movies-header">
+                            <h3 class="movies-title">{{trackName}}</h3>
+                            <div class="initial-release-date">{{releaseYear}}</div>
+                        </div>
+
+                        <div class="movies-description">
+                            <p class="movies-description-text">{{longDescription}}</p>
+                        </div>
+
+                        <div class="movies-footer">
+                            <div class="content-advisory-rating">{{convertDuration}}</div>
+                            <div class="duration">{{convertDuration}}</div>
+                        </div>
+                    </div>
+                </a>
+                <button class="remove-watchlist-movie">Remove</button>
             </div>
-
-            <a class="movies-box" href="#movie/{{trackId}}">
-                <div class="thumbnail">
-                    <div class="initial-image">
-                        <img class="movies-thumbnail" src="{{artworkUrl100}}"/>
-                    </div>
-                </div>
-
-                <div class="movies-top-box">
-                    <div class="movies-header">
-                        <h3 class="movies-title">{{trackName}}</h3>
-                        <div class="initial-release-date">{{releaseYear}}</div>
-                    </div>
-
-                    <div class="movies-description">
-                        <p class="movies-description-text">{{longDescription}}</p>
-                    </div>
-
-                    <div class="movies-footer">
-                        <div class="content-advisory-rating">{{convertDuration}}</div>
-                        <div class="duration">{{convertDuration}}</div>
-                    </div>
-                </div>
-            </a>
-            <button class="remove-watchlist-movie">Remove</button>
             {{/each}}
         </div>
     </div>
