Adds adding movie to existing watchlist functionality

--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -22,8 +22,8 @@
                     <div class="watchlist-menu-group">
                         <ul class="watchlist-menu">
                             <li class="watchlist-select-group" data-id="create-watchlist"> New watchlist... </li>
-                            {{#each watchlists as |watchlist|}}
-                            <li class="watchlist-select-group" data-id="{{watchlist.id}}">{{watchlist.name}}</li>
+                            {{#each watchlists}}
+                            <li class="watchlist-select-group" data-id="{{id}}">{{name}}</li>
                             {{/each}}
                         </ul>
                         <div class="new-watchlist" style="display: none;">
@@ -42,8 +42,8 @@
                 <div class="watchlist-menu-group">
                     <ul class="watchlist-menu">
                         <li class="watchlist-select-group" data-id="create-watchlist"> New watchlist... </li>
-                        {{#each watchlists as |watchlist|}}
-                        <li class="watchlist-select-group" data-id="{{watchlist.id}}">{{watchlist.name}}</li>
+                        {{#each watchlists}}
+                        <li class="watchlist-select-group" data-id="{{id}}">{{name}}</li>
                         {{/each}}
                     </ul>
                     <div class="new-watchlist" style="display: none;">
