Adds edit input on double click

--- a/js/templates/watchlist.html
+++ b/js/templates/watchlist.html
@@ -4,7 +4,9 @@
     </div>
 
     <div class="watchlist-aside">
-        <h4 class="watchlist-title">{{name}}</h4>
+        <div class="watchlist-title-box" data-id="{{id}}">
+            <h4 class="watchlist-title">{{name}}</h4>
+        </div>
 
         <div class="watchlist-movies">
             {{#each movies}}
