--- a/js/templates/navigationBar.html
+++ b/js/templates/navigationBar.html
@@ -10,7 +10,7 @@
         <a href="#{{references}}"><img id="site-logo" src="url({{siteImageUrl}}"></a>
     </div>
     <div class="menu">
-        <ul class="navigation-options" id="menu-closed">
+        <ul class="navigation-options" id="menu-initial-closed">
             {{#each menuOption}}
             <li><a href="#{{references}}" class="{{position}}">{{name}}</a></li>
             {{/each}}
