Add route for episode page

--- a/css/tvShow.css
+++ b/css/tvShow.css
@@ -146,6 +146,19 @@ html{
     display: none;
 }
 
+.tvShow-episodes-box span{
+    margin-left: 5%;
+}
+
+.episode-top-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-left: 2.4em;
+    min-width: 0;
+    flex: 1 1 auto;
+}
+
 @media screen and (min-width: 768px) {
 
     .tvShow-page {
