--- a/css/tvShowEpisode.css
+++ b/css/tvShowEpisode.css
@@ -135,12 +135,17 @@ html{
     background-image: url('../img/movie-tvShow-content/svg/price-icon.svg');
 }
 
-.tvShow-preview {
-    margin-top: 5%;
-}
-
 .tvShow-preview span{
     margin-left: 5%;
+}
+
+.episode-top-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-left: 2.4em;
+    min-width: 0;
+    flex: 1 1 auto;
 }
 
 .tvShow-info-box-desktop, .tvShow-summary-desktop, .tvShow-short-technical-info-desktop{
