--- a/js/templates/tvShowEpisodeThumbnail.html
+++ b/js/templates/tvShowEpisodeThumbnail.html
@@ -1,4 +1,4 @@
-<a class="movies-box" href="#tvShow/{{trackId}}">
+<a class="movies-box" href="#episode/{{trackId}}">
     <div class="thumbnail">
         <div class="initial-image">
             <img class="movies-thumbnail" src="{{artworkUrl100}}"/>
