--- a/css/watchlist.css
+++ b/css/watchlist.css
@@ -4,6 +4,7 @@
 
 .watchlist-page-option {
     display: flex;
+    justify-content: center;
 }
 
 .add-watchlist-text {
@@ -39,6 +40,7 @@
 
 .watchlist-movie {
     display: flex;
+    border: 1px solid #1B1D22;
 }
 
 .watchlist-movie-select-box {
@@ -47,4 +49,10 @@
 }
 
 .delete-watchlist-movie-checkbox {
+}
+
+.remove-watchlist-movie {
+}
+
+.delete-watchlist {
 }
